--- a/predio/index.html
+++ b/predio/index.html
@@ -52,7 +52,7 @@
         window.onload = ChamaAndar;
 
         function ChamaAndar(x){
-            x = window.location.href = 'https://andersonperfil.netlify.app/predio/index.html#1';//A PAGINA VAI SER RECARREGADA NESSE ENDEREÇO
+            x = window.location.href = 'https://andersonperfil.netlify.app/predio/#1';//A PAGINA VAI SER RECARREGADA NESSE ENDEREÇO
         }
     </script>
     <!--AQUI FICARÁ OS BOTOES FIXEDs-->
