--- a/index.html
+++ b/index.html
@@ -33,16 +33,9 @@
     </script>
 </head>
 <body>
-<!-- <div id="innit">
-    <div class="animation" onclick="acessarHome()"> 
-        <div class="box-innit">
-            <img src="imagens/btnInnit.png" alt="logo">
-            <p class="center">Entrar</p>
-        </div>
-    </div>
-</div> -->
+
 <button id='runaway-btn' style="z-index: 50;"> &#129315;</button>
-<section class="bg-n1 main-box">
+<section id="detail" class="bg-n1 main-box">
     <div class="scroll-n1">
         <div class="quadro-img">
             <img class="perfil-photo" src="imagens/ander.jpg">
@@ -69,10 +62,10 @@
            <a href="https://www.instagram.com/anderson_ferrari22/"><span>Instagram</span><img src="imagens/instagram.png" width="55px"></a>
           </div>
         </a>
-        <a href="https://www.linkedin.com/in/anderson-ferrari-231577100/">
+        <a href="https://www.linkedin.com/in/anderson-augusto-ferrari-231577100/">
           <div class="social-btn color-whatsapp">
             <div class="icons8-whatsapp"></div>
-            <a href="https://www.linkedin.com/in/anderson-ferrari-231577100/"><span>LinkedIn</span><img src="imagens/linkedin.png" width="55px">
+            <a href="https://www.linkedin.com/in/anderson-augusto-ferrari-231577100/"><span>LinkedIn</span><img src="imagens/linkedin.png" width="55px">
           </div>
         </a>
       </div>
