--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <section class="main-box">
     <div class="scroll-n2">
         <div class="title-n2">
-            <h1 class="colorWhite titleNv1">Skills</h1>
+            <h1 class="colorWhite titleNv1">Habilidades</h1>
         </div>
         <div class="skills-n2">
             <div>
