--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             <a href="./listaDinamica/"><div class="card">Lista dinâmica</div></a>
             <a href="./jogoDaVelha/"><div class="card">Jogo da Velha</div></a>
             <a href="./predio/" ><div class="card">Prédio</div></a>
+            <a href="./kanban-testes/" ><div class="card">Monte seu teste</div></a>
         </div>
     </div>
 </section>
