--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
                 console.log("Sucess" , res.status)
             })
         }
-
-
-
     </script>
 </head>
 <body>
@@ -66,6 +63,12 @@
           <div class="social-btn color-whatsapp">
             <div class="icons8-whatsapp"></div>
             <a href="https://www.linkedin.com/in/anderson-augusto-ferrari-231577100/"><span>LinkedIn</span><img src="imagens/linkedin.png" width="55px">
+          </div>
+        </a>
+        <a href="https://github.com/AndersonAugusto">
+          <div class="social-btn color-whatsapp">
+            <div class="icons8-whatsapp"></div>
+            <a href="https://github.com/AndersonAugusto"><span>Github</span><img src="imagens/github.png" width="55px">
           </div>
         </a>
       </div>
@@ -108,7 +111,7 @@
             <a href="./listaDinamica/"><div class="card">Lista dinâmica</div></a>
             <a href="./jogoDaVelha/"><div class="card">Jogo da Velha</div></a>
             <a href="./predio/" ><div class="card">Prédio</div></a>
-            <a href="./kanban-testes/" ><div class="card">Monte seu teste</div></a>
+            <a href="./kanban-testes/" ><div class="card">Análise de testes</div></a>
         </div>
     </div>
 </section>
