--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
         <div class="info-page">
             <h3>Anderson Augusto Ferrari</h3><br>
             <p>Programador Full-Stack </p>
-            <p>(19) 98779-3121</p>
+            <p>(19) 9 8779-3121</p>
             <p>andersonaugustoferrari@hotmail.com</p><br>
-            <h4>Pontos fortes:</h4>
-            <p>Sou muito dedicado e gosto de aprender.</p>
+            <h4>Sobre mim:</h4>
+            <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspAtualmente trabalho como desenvolvedor back-end, utilizando Node.js (Express) com arquitetura MVC.
+                Tenho grande experência com Front-end, sendo: HTML, CSS e Javascript. Também tenho conhecimento básico em desenvolvimento de SPA com os Frameworks: Angular, React.js e Vue.js. Trabalhei com plataformas de gerenciamento de projetos e sistema de versionamento, sendo: Github, Trello e Asana.
+            </p>
         </div>
     </div>
     <div class="social">
