--- a/index.html
+++ b/index.html
@@ -103,36 +103,26 @@
 </section>
 
 <section class="main-box">
-    <!-- <div class="scroll-n3">
-        <div class="title-n2">
-            <p class="colorWhite titleNv1">Projetos Realizados</p>
+  <div class="scroll-n2">
+    <div class="title-n2">
+        <h1 class="colorWhite titleNv1">Projetos</h1>
+    </div>
+    <div class="skills-n2 projects">
+        <div class="btn-projects">
+          <a href="./botoes/">Botões</a>
         </div>
-        <div class="projetos">
-            <a href="./botoes/"><div class="card">Botões</div></a>
-            <a href="./listaDinamica/"><div class="card">Lista dinâmica</div></a>
-            <a href="./jogoDaVelha/"><div class="card">Jogo da Velha</div></a>
-            <a href="./predio/" ><div class="card">Prédio</div></a>
-            <a href="./kanban-testes/" ><div class="card">Análise de testes</div></a>
+        <div class="btn-projects">
+          <a href="./listaDinamica/"><div>Lista dinâmica</div></a>
         </div>
-    </div> -->
-    <div class="carousel">
-        <ul class="carousel__list">
-          <li class="carousel__item" data-pos="-2">
-            <a href="./botoes/">Botões</a>
-          </li>
-          <li class="carousel__item" data-pos="-1">
-            <a href="./listaDinamica/"><div>Lista dinâmica</div></a>
-          </li>
-          <li class="carousel__item" data-pos="0">
-            <a href="./jogoDaVelha/"><div>Jogo da Velha</div></a>
-          </li>
-          <li class="carousel__item" data-pos="1">
-            <a href="./predio/" ><div>Prédio</div></a>
-          </li>
-          <li class="carousel__item" data-pos="2">
-            <a href="./kanban-testes/" ><div>Análise de testes</div></a>
-          </li>
-        </ul>
+        <div class="btn-projects">
+          <a href="./jogoDaVelha/"><div>Jogo da Velha</div></a>
+        </div>
+        <div class="btn-projects">
+          <a href="./predio/" ><div>Prédio</div></a>
+        </div>
+        <div class="btn-projects">
+          <a href="./kanban-testes/" ><div>Análise de testes</div></a>
+        </div>
       </div>
 </section>
 
@@ -156,5 +146,4 @@
  
 </body>
 <script src="index.js"></script>
-<script src="carousel3d.js"></script>
 </html>
