--- a/index.html
+++ b/index.html
@@ -107,23 +107,38 @@
     <div class="title-n2">
         <h1 class="colorWhite titleNv1">Projetos</h1>
     </div>
-    <div class="skills-n2 projects">
-        <div class="btn-projects">
-          <a href="./botoes/">Botões</a>
-        </div>
-        <div class="btn-projects">
-          <a href="./listaDinamica/"><div>Lista dinâmica</div></a>
-        </div>
-        <div class="btn-projects">
-          <a href="./jogoDaVelha/"><div>Jogo da Velha</div></a>
-        </div>
-        <div class="btn-projects">
-          <a href="./predio/" ><div>Prédio</div></a>
-        </div>
-        <div class="btn-projects">
-          <a href="./kanban-testes/" ><div>Análise de testes</div></a>
-        </div>
-      </div>
+      <div class="skills-n2 projects">
+          <a href="./botoes/">  
+            <div class="btn-projects">
+              <img src="./imagens/buttonsImage.png"  width="180px" alt="Buttons"/>
+              <div class="title-card">Botões</div>
+            </div>
+          </a>
+          <a href="./listaDinamica/">  
+            <div class="btn-projects">
+              <img src="./imagens/lista-de-papel.png"  width="180px" alt="Lista dinâmica"/>
+              <div class="title-card">Lista dinâmica</div>
+            </div>
+          </a>
+          <a href="./jogoDaVelha/">  
+            <div class="btn-projects">
+              <img src="./imagens/jogo-da-velha.png"  width="180px" alt="jogo da velha"/>
+              <div class="title-card">Jogo da Velha</div>
+            </div>
+          </a>
+          <a href="./predio/">  
+            <div class="btn-projects">
+              <img src="./imagens/predio-comercial.png"  width="180px" alt="prédio"/>
+              <div class="title-card">Prédio</div>
+            </div>
+          </a>
+          <a href="./kanban-testes/">  
+            <div class="btn-projects">
+              <img src="./imagens/planning.png"  width="180px" alt="Analise de Testes"/>
+              <div class="title-card">Análise de testes</div>
+            </div>
+          </a>
+     </div>
 </section>
 
 <section class="main-box">
