--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <a href="./kanban-testes/">  
             <div class="btn-projects">
               <img src="./imagens/planning.png"  width="180px" alt="Analise de Testes"/>
-              <div class="title-card">Análise de testes</div>
+              <div class="title-card">Plataforma de testes</div>
             </div>
           </a>
      </div>
