--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <section id="detail" class="bg-n1 main-box">
     <div class="scroll-n1">
         <div class="quadro-img">
-            <img class="perfil-photo" src="imagens/ander.jpg">
+            <img class="perfil-photo" src="imagens/ander.png">
         </div>
         <div class="info-page">
             <h3>Anderson Augusto Ferrari</h3><br>
