--- a/jogoDaVelha/index.html
+++ b/jogoDaVelha/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./jogoDaVelha.css">
-    <link rel="stylesheet" href="../global.css">
+    <link rel="stylesheet" href="../assets/jogoDaVelha.css">
+    <link rel="stylesheet" href="../assets/global.css">
     <title>Jogo da velha</title>
 </head>
 <body>
