--- a/kanban-testes/kanban.html
+++ b/kanban-testes/kanban.html
@@ -14,6 +14,11 @@
     </style>
 </head>
 <body>
+    <script>
+        document.addEventListener("DOMContentLoaded", function(event) {
+            validaLogin()
+        });
+    </script>
     <section id="kanban">
         <div class="column">
             <div><h4>Backlog <span id="countBacklog"></span></h4></div>
