--- a/listaDinamica/index.html
+++ b/listaDinamica/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../paleta.css">
-    <link rel="stylesheet" href="../global.css">
-    <link rel="stylesheet" href="./projeto2.css">
+    <link rel="stylesheet" href="../assets/paleta.css">
+    <link rel="stylesheet" href="../assets/global.css">
+    <link rel="stylesheet" href="../assets/projeto2.css">
     <title>Lista dinâmica</title>
 </head>
 <body>
@@ -37,11 +37,11 @@
             </form>
         </section>
         <section id="lista">
+            <span id="count" style="color:#00fffe;"></span>
             <ul id="listaInterna">
     
             </ul>
         </section>
-        <span id="count" style="color:#00fffe;"></span>
     </section>
     <div class="voltar">
         <button onclick="window.history.back()">Voltar</button>
@@ -49,11 +49,6 @@
     <div class="limpar">
         <button onclick="clearStorege()">Limpar lista</button>
     </div>
-    <!-- <section class="sidebar">
-        <div>
-
-        </div>       
-    </section> -->
     <section id="alert" class="alert">
         <p>Você pode montar uma lista de tarefas.</p>
     </section>
@@ -85,7 +80,6 @@
     }
 
     function renderTask() {
-        document.getElementById('count').innerHTML = cards.length
         cards.forEach(task => {
             let modelTask = `
             <li class="listOfTask" >  
