--- a/index.html
+++ b/index.html
@@ -127,38 +127,38 @@
       <div class="skills-n2 projects">
           <a href="./botoes/">  
             <div class="btn-projects">
-              <img src="./imagens/buttonsImage.png"  width="180px" alt="Buttons"/>
+              <img src="./imagens/buttonsImage.png" width="180px" alt="Buttons"/>
               <div class="title-card">Botões</div>
             </div>
           </a>
           <a href="./listaDinamica/">  
             <div class="btn-projects">
-              <img src="./imagens/lista-de-papel.png"  width="180px" alt="Lista dinâmica"/>
+              <img src="./imagens/lista-de-papel.png" width="180px" alt="Lista dinâmica"/>
               <div class="title-card">Lista dinâmica</div>
             </div>
           </a>
           <a href="./jogoDaVelha/">  
             <div class="btn-projects">
-              <img src="./imagens/jogo-da-velha.png"  width="180px" alt="jogo da velha"/>
+              <img src="./imagens/jogo-da-velha.png" width="180px" alt="jogo da velha"/>
               <div class="title-card">Jogo da Velha</div>
             </div>
           </a>
           <a href="./predio/">  
             <div class="btn-projects">
-              <img src="./imagens/predio-comercial.png"  width="180px" alt="prédio"/>
+              <img src="./imagens/predio-comercial.png" width="180px" alt="prédio"/>
               <div class="title-card">Prédio</div>
             </div>
           </a>
           <a href="./kanban-testes/">  
             <div class="btn-projects">
-              <img src="./imagens/planning.png"  width="180px" alt="Analise de Testes"/>
+              <img src="./imagens/planning.png" width="180px" alt="Analise de Testes"/>
               <div class="title-card">Plataforma de testes</div>
             </div>
           </a>
-          <a href="#" class="disabled">  
+          <a href="./loja/">  
             <div class="btn-projects">
-              <img src=""  width="180px" alt=""/>
-              <div class="title-card">Em breve</div>
+              <img src="./imagens/mercado.png" width="180px" alt=""/>
+              <div class="title-card">Mercado</div>
             </div>
           </a>
           <a href="#" class="disabled">  
@@ -193,7 +193,6 @@
         </form>
     </div>
 </section>
-
  
 </body>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
