--- a/kanban-testes/sections.html
+++ b/kanban-testes/sections.html
@@ -26,11 +26,17 @@
             </div>
         </div>
 
-
         <div id="sala" class="sala">
 
         </div>
+
         <div class="buttonCreate">
+            <button class="goBackPortifolio color-button-ambientes" onclick="gobackPortifolio()">
+                Voltar para portifólio
+            </button>
+            <button class="desloga color-button-ambientes" onclick="desloga()">
+                Sair
+            </button>
             <button class="cria color-button-ambientes" onclick="openCreate()">
                 Criar ambiente
             </button>
