--- a/loja/AboutUs/index.html
+++ b/loja/AboutUs/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sobre nós</title>
     <link rel="stylesheet" href="../../assets/headerLojinha.css">
     <link rel="stylesheet" href="../../assets/footerLojinha.css">
     <link rel="stylesheet" href="../../assets/global.css">
-    <link rel="stylesheet" href="../../assets/products.css">
+    <link rel="stylesheet" href="../../assets/about.css">
     <link rel="stylesheet" href="../../assets/reset.css">
-    <title>Produtos</title>
 </head>
 <body>
-
     <header>
         <section>
             <ul class="navbar">
@@ -20,42 +19,26 @@
                 <li><a href="/loja/">Início</a></li>
                 <li><a href="/loja/products/">Produtos</a></li>
                 <li><a href="/loja/AboutUs/">Sobre nós</a></li>
-                <li><a href="">Fale conosco</a></li>
+                <li><a href="">Contato</a></li>
             </ul>
         </section>
     </header>
     <body>
-        <div id="fundoPreto">
-            <div id="modal" class="relative modal">
-                <div id="checkout" class="checkout">
-                    
-                </div> 
-                <div  class="closeCheckout">
-                    <div class="menuModal" id="valorTotal"></div>
-                    <div class="menuModal" onclick="clearCarrinho()">Limpar Carrinho</div>
-                    <div class="menuModal" onclick="closeModal()"> Fechar</div>
-                </div>
+        <section class="about">
+            <div class="first">
+                <img src="../../imagens/logoMercadao.png" alt="logo">
             </div>
-        </div>
-        <section class="products">
-            <section id="menu">
-               <div class="inputField">
-                    <input id="filtro" type="text" placeholder="Filtro">
-               </div>
-               <div class="">
-                    <button>Buscar</button>
-                </div>
-                <div id="carrinho">
-                    <img src="../../imagens/carrinho.png" onclick="showCheckout()" alt=""> 
-                    <span id="carrinhoCount">  </span>   
-                </div>
-            </section>
-            <div id="count"></div>
-            <section id="listOfProducts">
-                
-            </section>
+            <div class="second">
+                <h1>What is Lorem Ipsum?</h1>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
+                <br>
+                <p>
+                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+                </p>
+            </div>
         </section>
-
     </body>
     <footer>
         <div class="bottom-bar"></div>
@@ -63,7 +46,7 @@
             <div class="separation">
                 <img src="../../imagens/instagram.png" width="32px" height="32px" alt="">
                 <img src="../../imagens/facebook.png" width="32px" height="32px" alt="">
-                <img src="../../imagens/e-mail.png" width="32px" height="32px" alt="">
+                <img src="../imagens/e-mail.png" width="32px" height="32px" alt="">
             </div>
             <div class="separation centerFooter">
                 <p>Where can I get some?</p>
@@ -84,7 +67,5 @@
             <button onclick="window.history.back()">Voltar</button>
         </div>
     </footer>
-    <script src="./listOfProdutcs.js"></script>
-    <script src="./index.js"></script>
 </body>
 </html>
