--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
     </script>
 </head>
-<body>
+<body id="all">
   <div id="loading"><span class="redondly"></span></div>
 
 <section id="detail" class="bg-n1 main-box">
@@ -53,7 +53,7 @@
         <div class="quadro-img">
             <img class="perfil-photo" src="imagens/ander.png">
         </div>
-        <div class="info-page">
+        <div id="info-anima" class="info-page">
             <h3>Anderson Augusto Ferrari</h3><br>
             <p>Programador Full-Stack </p>
             <p>(19) 9 8779-3121</p>
@@ -196,5 +196,4 @@
  
 </body>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<script src="index.js"></script>
 </html>
